added in more words

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-    <h1 class="header">Hello Cold Brew!</h1>
+    <h1 class="header">Hello Cold Brew, COOL KIDS!</h1>
 
     <img class="banner" src="img/coffeeBanner.jpg" alt="Picture of several cups of coffee">
     <img class="banner" src="img/coffeeBanner.jpg" alt="Picture of several cups of coffee">
